# poetry-identification

./: .gitignore  README.md  requirements.txt  train_random_forest.py
classification/: Cargo.toml
classification/src/: inquery.rs  main.rs
djvuxml-rs/: .gitignore  Cargo.toml
djvuxml-rs/src/: coords.rs  lib.rs  params.rs  text.rs  types.rs
truth-data/: truth.jsonl
